test: add tests to all files
